--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
         "php": "^8.1",
         "anhskohbo/no-captcha": "^3.5",
         "artesaos/seotools": "^1.2",
+        "google/recaptcha": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^3.2",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravolt/avatar": "^5.0",
         "livewire/livewire": "^2.11",
         "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-medialibrary": "^10.0.0",
